# aoc2023

./: .gitignore  Cargo.toml  README.md  profiling.sh  runday.sh
.github/workflows/: rust.yml
benches/: common.rs  cri.rs  iai.rs
src/: lib.rs  main.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: generate_assertions.py  mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: Day15.java  Day15.py  java-run.sh  mod.rs
src/day16/: mod.rs
src/day17/: mod.rs
src/day18/: ingressline.rs  mod.rs  plot.rs
src/day19/: mod.rs
src/day2/: mod.rs
src/day20/: mod.rs
src/day21/: mod.rs
src/day22/: mod.rs
src/day23/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs  network.rs
src/day9/: mod.rs
