[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
authors = ["Deminder <tremminder@gmail.com>"]
description = "Solutions for the Advent of Code 2023"
homepage = "https://github.com/Deminder/aoc2023"
license = "MIT"

[lib]
name = "puzzle"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
anyhow = "1.0.72"
either = "1.9.0"
itertools = "0.11.0"
regex = "1.9.1"
array-init = "2.1.0"
num-integer = "0.1.45"
